<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="mainViewModel" type="nz.ara.game.viewmodel.MainViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="nz.ara.game.view.activity.MainActivity"
        tools:layout_editor_absoluteY="81dp">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="368dp"
            android:layout_height="342dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <nz.ara.game.view.views.MapView
                id="@+id/mapview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                app:itemsWallAboveStr="@{mainViewModel.wallAbovePointListStr}"
                app:itemsWallLeftStr="@{mainViewModel.wallLeftPointListStr}"
                app:wallSquareStr="@{mainViewModel.wallSquareStr}"
                app:thePointStr="@{mainViewModel.thePointStr}"
                app:minPointStr="@{mainViewModel.minPointStr}"
                >
            </nz.ara.game.view.views.MapView>

        </FrameLayout>

        <Spinner
            android:id="@+id/level_spinner"
            android:layout_width="136dp"
            android:layout_height="42dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:entries="@{mainViewModel.levels}"
            android:prompt="@string/level_prompt"
            app:layout_constraintBottom_toTopOf="@+id/button_new"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/button_reset_name"
            app:layout_constraintBottom_toTopOf="@+id/button_save"
            app:layout_constraintEnd_toStartOf="@+id/button_pause" />

        <Button
            android:id="@+id/button_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/button_pause_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_reset"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="451dp" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="88dp"
            android:layout_height="49dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/button_save_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_new"
            app:layout_constraintEnd_toStartOf="@+id/button_help" />

        <Button
            android:id="@+id/button_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/button_help_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_save"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_new"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/button_new_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView_move_name"
            android:layout_width="85dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/text_mvcount_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="113dp"
            android:layout_height="27dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{mainViewModel.moveCount}"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView_move_name"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="176dp" />

    </android.support.constraint.ConstraintLayout>
</layout>